--- a/Shooting Range Safety.ipynb
+++ b/Shooting Range Safety.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"baffle.png\" style=\"height:400px\">"
+    "<img src=\"images/baffle.png\" style=\"height:400px\">"
    ]
   },
   {
@@ -304,7 +304,7 @@
     }
    ],
    "source": [
-    "cd9 = pd.read_excel('Cd.xlsx', sheet_name=\"9mm\")\n",
+    "cd9 = pd.read_excel('reference_data/Cd.xlsx', sheet_name=\"9mm\")\n",
     "\n",
     "spl9 = UnivariateSpline(cd9['Vel'], cd9['Cd'])\n",
     "spl9.set_smoothing_factor(0.00005)\n",
@@ -335,7 +335,7 @@
     }
    ],
    "source": [
-    "cd556 = pd.read_excel('Cd.xlsx', sheet_name=\"556mm\")\n",
+    "cd556 = pd.read_excel('reference_data/Cd.xlsx', sheet_name=\"556mm\")\n",
     "\n",
     "spl556 = UnivariateSpline(cd556['Vel'], cd556['Cd'])\n",
     "spl556.set_smoothing_factor(0.00005)\n",
@@ -494,14 +494,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 9.71 s\n"
+      "Wall time: 9.62 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "if cal==\"5.56mm\":\n",
-    "    data556 = pd.read_excel(\"556infoc.xlsx\")\n",
+    "    data556 = pd.read_excel(\"reference_data/556infoc.xlsx\")\n",
     "    \n",
     "    neglim = 3\n",
     "    \n",
@@ -541,7 +541,7 @@
     "    \n",
     "    \n",
     "if cal == \"9mm\": \n",
-    "    ric = pd.read_csv('ric9mmsand.csv', sep=\";\")\n",
+    "    ric = pd.read_csv('reference_data/ric9mmsand.csv', sep=\";\")\n",
     "    ric_v = ric.dropna()\n",
     "       \n",
     "    xmin = 0; xmax = 25 #incidencia\n",
@@ -827,14 +827,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████| 500000/500000 [06:08<00:00, 1357.09it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████| 500000/500000 [05:45<00:00, 1447.61it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 6min 8s\n"
+      "Wall time: 5min 45s\n"
      ]
     }
    ],
@@ -918,14 +918,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 3470/3470 [01:21<00:00, 42.71it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 3470/3470 [01:15<00:00, 45.88it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 21s\n"
+      "Wall time: 1min 15s\n"
      ]
     }
    ],
